--- a/style.css
+++ b/style.css
@@ -177,6 +177,9 @@ a:hover {
 /*END PRODUCT INTRO*/
 
 /*MENU TABS*/
+.menu-tabs {
+  justify-content: center;
+}
 .menu-tabs .nav-item a {
   color: #6d6d6d;
 }
@@ -204,19 +207,122 @@ a:hover {
 }
 
 /*Footer*/
-.icon-container {
-  width: 30px;
-  height: 30px;
+/* .icon-container {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin: 0 10px;
+  text-align: center;
+  cursor: pointer;
   border-radius: 50%;
+  border: 2px solid #d8e2dc;
+  float: left;
+  transition: all 0.5s ease;
+}
+
+.icon-container .fab {
+  color: #d8e2dc;
+  /* margin-top: 20px; */
+/* transition: all 0.5s ease;
+} */
+.wrapper {
+  /* top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 550px; */
+}
+
+/* Style the Un-order list by setting its list-style to none */
+.wrapper ul {
+  margin-top: 20px;
+  list-style: none;
+  width: 340px;
+  display: flex;
+  justify-content: space-around;
+}
+
+/* Style the list items inside the UL list, by setting its width, height and line-height 
+  and float them to left and set its border and border-radius.
+ */
+.wrapper ul li {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  margin: 0 10px;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 50%;
+  border: 5px solid #d8e2dc;
+  transition: all 0.5s ease;
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid #a8a6a6;
-  margin-right: 16px;
+}
+
+/* Style the icons by setting its color and margin-top value to 20px 
+to align it properly */
+.wrapper ul li .fab {
+  color: #d8e2dc;
+  /* margin-top: 20px; */
+  transition: all 0.5s ease;
+}
+
+/* Now target the specific li classes for styling and use box-shadow effect to border and text-shadow effect
+  to icons for glowing effect and use transition property for smooth transition effect. */
+/*facebook*/
+.wrapper ul li:hover.facebook {
+  border: 5px solid #3b5998;
+  box-shadow: 0 0 15px #3b5998;
+  transition: all 0.5s ease;
+}
+
+.wrapper ul li:hover .fa-facebook {
+  color: #3b5998;
+  text-shadow: 0 0 15px #3b5998;
+  transition: all 0.5s ease;
+}
+
+/*twitter*/
+.wrapper ul li:hover.twitter {
+  border: 5px solid #00aced;
+  box-shadow: 0 0 15px #00aced;
+  transition: all 0.5s ease;
+}
+
+.wrapper ul li:hover .fa-twitter {
+  color: #00aced;
+  text-shadow: 0 0 15px #00aced;
+  transition: all 0.5s ease;
+}
+
+/* instagram */
+.wrapper ul li:hover.instagram {
+  border: 5px solid #bc2a8d;
+  box-shadow: 0 0 15px #bc2a8d;
+  transition: all 0.5s ease;
+}
+
+.wrapper ul li:hover .fa-instagram {
+  color: #bc2a8d;
+  text-shadow: 0 0 15px #bc2a8d;
+  transition: all 0.5s ease;
+}
+
+/* google */
+.wrapper ul li:hover.pinterest {
+  border: 5px solid #dd4b39;
+  box-shadow: 0 0 15px #dd4b39;
+  transition: all 0.5s ease;
+}
+
+.wrapper ul li:hover .fa-pinterest {
+  color: #dd4b39;
+  text-shadow: 0 0 15px #dd4b39;
+  transition: all 0.5s ease;
 }
 
 @media (max-width: 768px) {
-  .icon-container {
+  .wrapper {
     display: none;
   }
 }
@@ -269,6 +375,10 @@ a:hover {
   height: 400px;
 }
 
+.new-content .new-content-left {
+  padding-right: 4px;
+}
+
 .news-content img {
   width: 100%;
   display: block;
@@ -290,6 +400,11 @@ a:hover {
   max-height: 200px;
 }
 
+.round-indicators li {
+  background-color: black;
+  border: none !important;
+}
+
 @media (max-width: 768px) {
   .header-right-contact {
     margin-bottom: 8px;
@@ -302,4 +417,28 @@ a:hover {
   .header-email {
     display: none;
   }
+
+  .news-content {
+    height: auto;
+  }
+
+  .new-content .new-content-left {
+    padding-right: 0;
+  }
+
+  .menu-tabs {
+    justify-content: flex-start;
+  }
+}
+
+.round-indicators {
+  bottom: -25px;
+}
+
+.round-indicators li {
+  width: 10px;
+  margin-left: 1.5rem;
+  height: 10px;
+  border-radius: 50%;
+  border: 3px solid black;
 }
