Add style for menu

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   background-color: white;
   max-width: 100%;
 }
+
 h1,
 h2,
 h3 {
@@ -29,6 +30,22 @@ a:hover {
   align-items: center;
 }
 
+.header-sticky.on-stick {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  z-index: 10;
+  background: white;
+}
+
+@media only screen and (max-width: 48em) {
+  .header-sticky.on-stick {
+    position: static;
+  }
+}
+
 .header .header-left .logo-img {
   width: 60px;
   height: 60px;
@@ -37,18 +54,37 @@ a:hover {
 .header .header-right {
   text-align: right;
 }
-.header-right-contact {
-  margin-bottom: 24px;
+
+.header-left a {
+  padding: 20px 0;
+  display: block;
+  transition: 0.3s ease;
 }
+
+.on-stick .header-left a {
+  padding: 0;
+  transition: 0.3s ease;
+}
+
+.topbar-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
 .header-address {
   margin-right: 16px;
 }
+
 .header-email {
   display: inline-block;
 }
+
 .phone-header {
   font-size: 18px;
 }
+
 /*END HEADER*/
 
 /*NAVBAR*/
@@ -58,6 +94,7 @@ a:hover {
   font-size: 18px;
   transition: 0.3s;
 }
+
 .nav .nav-link:hover {
   color: #c8fbfa;
   cursor: pointer;
@@ -88,16 +125,16 @@ a:hover {
   z-index: 1;
 }
 
-.submenu > li {
+.submenu>li {
   list-style: none;
   width: 150px;
 }
 
-.nav > li:hover .submenu {
+.nav>li:hover .submenu {
   display: block;
 }
 
-.nav > li {
+.nav>li {
   position: relative;
   cursor: pointer;
 }
@@ -127,6 +164,7 @@ a:hover {
 .main-menu li.active {
   color: red;
 }
+
 /*END NAVBAR*/
 
 /*3 ITEMS*/
@@ -162,6 +200,7 @@ a:hover {
   height: 2px;
   margin: 0 auto;
 }
+
 .product-intro .product-intro-content .intro-detail {
   padding: 16px;
   text-align: center;
@@ -169,25 +208,30 @@ a:hover {
   font-size: 24px;
   line-height: 30px;
 }
+
 @media (max-width: 768px) {
   .intro-img {
     display: none;
   }
 }
+
 /*END PRODUCT INTRO*/
 
 /*MENU TABS*/
 .menu-tabs {
   justify-content: center;
 }
+
 .menu-tabs .nav-item a {
   color: #6d6d6d;
 }
+
 .menu-tabs .nav-item a {
   transition: unset;
   padding-top: 0;
   padding-bottom: 0;
 }
+
 .menu-tabs .nav-item a:hover {
   color: inherit;
 }
@@ -196,6 +240,7 @@ a:hover {
 .nav-link.active {
   border: unset;
 }
+
 /*TIN TUC*/
 .news .news-img {
   width: 100%;
@@ -347,6 +392,7 @@ to align it properly */
   width: 262px;
   height: 262px;
 }
+
 .image-box img {
   transition: all 0.3s;
   display: block;
@@ -366,6 +412,7 @@ to align it properly */
     display: flex;
     flex-direction: column;
   }
+
   .phone-header a:not(:last-child) {
     margin-right: 0;
   }
@@ -409,6 +456,7 @@ to align it properly */
   .header-right-contact {
     margin-bottom: 8px;
   }
+
   .header-address {
     margin-right: 0;
     font-size: 8px;
